--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bidyashish/panchang": "^1.0.10",
-    "date-fns": "^2.30.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-datepicker": "^4.8.0"
-  },
+  "next": "14.2.3",
+  "react": "^18",
+  "react-dom": "^18",
+  "suncalc": "^1.6.0",
+  "date-fns": "^3.6.0",
+  "react-datepicker": "^7.3.0"
+},
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
