--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bidyashish/panchang": "^1.0.10",
-    "date-fns": "^2.30.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-datepicker": "^4.8.0"
+    "suncalc": "^1.6.0",
+    "date-fns": "^3.6.0",
+    "react-datepicker": "^7.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.1"
   }
 }
