--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "next": "14.2.3",
-  "react": "^18",
-  "react-dom": "^18",
-  "suncalc": "^1.6.0",
-  "date-fns": "^3.6.0",
-  "react-datepicker": "^7.3.0"
-},
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "suncalc": "^1.6.0",
+    "date-fns": "^3.6.0",
+    "react-datepicker": "^7.3.0"
+  },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
