--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18",
     "suncalc": "^1.6.0",
     "date-fns": "^3.6.0",
-    "react-datepicker": "^7.3.0"
+    "react-datepicker": "^7.3.0",
+    "framer-motion": "^10.16.2"
   },
   "devDependencies": {
     "@types/node": "^20",
