--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "panchang-web",
-  "version": "0.1.0",
+  "name": "astroweb",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,22 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "suncalc": "^1.6.0",
-    "date-fns": "^3.6.0",
-    "react-datepicker": "^7.3.0"
+    "next": "13.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "suncalc": "^1.9.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.1.6",
+    "@types/react": "^18.2.28",
+    "@types/node": "^20.5.1"
   }
 }
