--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "suncalc": "^1.9.0"
+    "suncalc": "^1.9.0",
+    "react-datepicker": "^6.9.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
