--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "suncalc": "^1.9.0",
-    "react-datepicker": "^6.9.0"
+    "react-datepicker": "^6.9.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
